<package>
 <name> cart_traj_generators </name>
  <version>0.1.0</version>
  <description>
    Cartesian trajectory generator C++ classes.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/cart_traj_generators</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>orocos_kdl</run_depend>

</package>